[package]
name = "beagle"
version = "0.1.2"
authors = ["Popog"]
description = "A basic linear algebra library for computer graphics."
build = "build.rs"
repository = "https://github.com/Popog/beagle-rs"
readme = "README.md"
keywords = ["gamedev", "math", "matrix", "vector"]
license = "MIT/Apache-2.0"
