[package]
name = "beagle"
version = "0.1.4"
authors = ["Popog"]
description = "A basic linear algebra library for computer graphics."
build = "build.rs"
repository = "https://github.com/Popog/beagle-rs"
readme = "README.md"
keywords = ["gamedev", "math", "matrix", "vector"]
license = "MIT/Apache-2.0"

[features]
serde_all = ["serde", "serde_derive"]
quick_bench = [] # remove most of the functions from the benchmark to speed up compiles

[dependencies]
rand = { version = "^0.3", optional = true }
rustc-serialize = { version = "^0.3", optional = true }
serde = { version = "^0.8", optional = true }
serde_derive = { version = "^0.8", optional = true }

[profile.test]
opt-level = 3

[profile.bench]
codegen-units = 4
